--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- TOP BAR -->
     <div class="topbar">
       <div class="topbar-left">
-        <img src="WhatsApp Image 2025-09-23 at 20.38.59.jpeg" alt="Company Logo" class="logo">
-      </div>
+        <img src="./WhatsApp Image 2025-09-23 at 20.38.59.jpeg.jpg" alt="Company Logo" class="logo">
+      </div>.
 
       <div class="topbar-center">
         <div class="info">
