Change contact email in index.html
Updated email address in the top bar for contact.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="info">
           <span class="label">Email Us</span>
-          <span class="value">engiplex@zohomail.in</span>
+          <span class="value">engiplexlearning@outlook.com</span>
         </div>
       </div>
 
@@ -202,3 +202,4 @@
 
   </body>
 </html>
+
